--- a/beginners-programming/index.html
+++ b/beginners-programming/index.html
@@ -25,7 +25,7 @@
       <h2>Beginning your journey towards learning to code</h2>
     </hgroup>
 
-<p>Hello and welcome to the "Beginners programming TopicKit. This kit contains resources that you can use the learn and teach general programming principles and the JavaScript language. The material is divided into three sections:</p>
+<p>Hello and welcome to the "Beginners programming" TopicKit. This kit contains resources that you can use the learn and teach general programming principles and the JavaScript language. The material is divided into three sections:</p>
 
 <ol>
   <li><a href="guides/index.html">Guides</a>: This section contains a full 8-part tutorial series tat you can work through on your own, or use for collaborative learning or teaching a class. This section also contains a number of demos to demonstrate the topics in action.</li>
