most of the slide notes now done.

--- a/beginners-programming/slides/index.html
+++ b/beginners-programming/slides/index.html
@@ -161,7 +161,7 @@
 	</div></section>
 
 	<section class="slide"><div>
-		<h2>Variable data types</h2>
+		<h2>Common variable data types</h2>
 		<ul>
 		  <li>Integer, no quotes, e.g. <code>25</code></li>
 		  <li>String, in quotes, e.g. <code>"Chris"</code>. <code>"25"</code> is still a string</li>
@@ -176,7 +176,7 @@
 		  <li><code>var</code> to declare variable</li>
 		  <li>Variable naming rules: no space, punctuation or reserved words/characters</li>
 		  <li>JavaScript is case sensitive: <code>myVariable</code> is not <code>myvariable</code></li>
-		  <li>Lines end with a semi-colon (;)</li>
+		  <li>Lines end with a semi-colon (<code>;</code>)</li>
 		  <li>Code block: <code>{ ... }</code></li>
 		</ul>
 	</div></section>
@@ -199,6 +199,7 @@
 		  <li><code>===</code> — strict equality/identity</li>
 		  <li><code>||</code> — logical OR</li>
 		  <li><code>&&</code> — logical AND</li>
+		  <li><code>&lt;</code>, <code>&gt;</code>, <code>&lt;=</code>, <code>=&gt;</code> — less than, greater than, less than or equal to, greater than or equal to</li>
 		  <li><code>!, !==</code> — logical NOT, not equal to</li>
 		</ul>
 	</div></section>
@@ -230,7 +231,7 @@
 	<section class="slide"><div>
 		<h2>Conditional code</h2>
 		<ul>
-          <li>Allows different code to run Depending on a condition</li>
+          <li>Allows different code to run depending on a condition</li>
           <li>If expression is true, run code 1, else run code 2</li>
 		</ul>
 	</div></section>
